# fall2024-cs460-indoor-env

./: README.md
fall2024-cs460-outdoor-env/: README.md
fall2024-cs460-outdoor-env/outdoorenv/: .OutdoorEnv.wbproj  package.xml  setup.cfg  setup.py
fall2024-cs460-outdoor-env/outdoorenv/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
fall2024-cs460-outdoor-env/outdoorenv/install/outdoorenv/share/outdoorenv/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
fall2024-cs460-outdoor-env/outdoorenv/install/outdoorenv/share/outdoorenv/launch/: webots_launch.py
fall2024-cs460-outdoor-env/outdoorenv/install/outdoorenv/share/outdoorenv/worlds/: my_world.wbt
fall2024-cs460-outdoor-env/outdoorenv/log/: latest_build
fall2024-cs460-outdoor-env/outdoorenv/worlds/: my_world.wbt
install/: local_setup.sh  setup.sh
install/myenv/share/myenv/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/myenv/share/myenv/launch/: webots_launch.py
install/myenv/share/myenv/worlds/: .my_world.wbproj  my_world.wbt
log/: latest_build
myenv/: package.xml  setup.cfg  setup.py
myenv/worlds/: .my_world.wbproj
